--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         alt="logo Vervoerregio Amsterdam"
       />
     </header>
+
+    <!-- Hieronder bevinden zich de 4 hoofdcategorieën -->
     <aside>
       <a href="" class="categorie">
         <svg
@@ -75,6 +77,7 @@
       </a>
     </aside>
 
+    <!-- Dit zijn de drie knoppen om de toegankelijkheid van de content te verbeteren -->
     <ul class="ui-settings">
       <li>
         <a href="">
@@ -133,7 +136,7 @@
     </ul>
 
     <main>
-      <div class="folder">
+      <section class="folder">
         <div class="content">
           <h1>1.2 Op tijd gebaseerde media</h1>
           <p>
@@ -204,7 +207,7 @@
             presenteert voor live louter-geluid content.
           </p>
         </div>
-      </div>
+      </section>
     </main>
 
     <footer class="holster">
