--- a/begrijpelijk.html
+++ b/begrijpelijk.html
@@ -7,7 +7,7 @@
       content="width=device-width,initial-scale=1"
     />
     <title>
-      Vervoerregio Amsterdam - Toolgankelijkheid
+        Toolgankelijkheid · Waarneembaar
     </title>
     <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="../styles/mobile.css" />
