--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     <main>
       <div class="wrapper">
         <div class="intro">
-          <h2>Maak kennis met</h2>
-          <h1>Toolgankelijk</h1>
+          <h1><small>Maak kennis met</small> Toolgankelijk</h1>
         </div>
         <nav class="options">
           <h2>Kies een categorie</h2>
