--- a/waarneembaar.html
+++ b/waarneembaar.html
@@ -29,7 +29,7 @@
     </header>
 
     <!-- Hieronder bevinden zich de 4 hoofdcategorieën -->
-    <aside>
+    <aside class="cntt">
       <a href="./waarneembaar.html" class="categorie">
         <svg
           viewBox="0 0 388 268"
@@ -141,74 +141,17 @@
     <main>
       <section class="folder">
         <div class="content">
-          <h1>1.2 Op tijd gebaseerde media</h1>
+          <h1>Filmpjes hebben een ondertiteling met de gesproken tekst en andere geluiden</h1><br>
+          <h2 class="uitleg"><small>Uitleg</small></h2>
           <p>
-            Lever alternatieven voor op tijd gebaseerde
-            media.
+            Ondertiteling met de gesproken tekst en andere geluiden zorgt ervoor dat gebruikers met een auditieve beperking het filmpje kunnen volgen. Bovendien is een videobestand pas doorzoekbaar voor Google en andere zoekmachines als er audiodescriptie en ondertiteling aan is toegevoegd.
           </p>
-          <br />
-          <h3>
-            Succescriterium 1.2.4 Ondertitels voor doven en
-            slechthorenden (live)
-          </h3>
+          <br>
+          <h2><small>Tip</small></h2>
           <p>
-            Er worden ondertitels voor doven en
-            slechthorenden geleverd voor alle live
-            audiocontent in gesynchroniseerde media.
+            De ene mediaplayer biedt meer toegankelijkheidsopties dan de andere. Kies voor multimediasoftware die is ingericht op toegankelijkheid. Daarnaast is Scribit.pro een handig online programma waarmee je video’s eenvoudig  kunt voorzien van ondertiteling, audiodescriptie en een tekstalternatief.
           </p>
-          <br />
-          <h3>
-            Succescriterium 1.2.5 Audiodescriptie (vooraf
-            opgenomen)
-          </h3>
-          <p>
-            Er wordt een audiodescriptie geleverd voor alle
-            vooraf opgenomen videocontent in
-            gesynchroniseerde media.
-          </p>
-          <br />
-          <h3>
-            Succescriterium 1.2.6 Gebarentaal (vooraf
-            opgenomen)
-          </h3>
-          <p>
-            Er wordt een gebarentaalvertolking geleverd voor
-            alle vooraf opgenomen audiocontent in
-            gesynchroniseerde media.
-          </p>
-          <br />
-          <h3>
-            Succescriterium 1.2.7 Verlengde audiodescriptie
-            (vooraf opgenomen)
-          </h3>
-          <p>
-            Waar pauzes in voorgrondgeluid onvoldoende zijn
-            om audiodescripties toe te passen om de
-            boodschap van de video over te brengen, wordt
-            een verlengde audiodescriptie geleverd voor alle
-            vooraf opgenomen videocontent in
-            gesynchroniseerde media.
-          </p>
-          <br />
-          <h3>
-            Succescriterium 1.2.8 Media-alternatief (vooraf
-            opgenomen)
-          </h3>
-          <p>
-            Er wordt een alternatief geleverd voor op tijd
-            gebaseerde media voor alle vooraf opgenomen
-            gesynchroniseerde media en voor alle vooraf
-            opgenomen louter-videobeeld media.
-          </p>
-          <br />
-          <h3>
-            Succescriterium 1.2.9 Louter-geluid (live)
-          </h3>
-          <p>
-            Er wordt een alternatief geleverd voor op tijd
-            gebaseerde media dat equivalente informatie
-            presenteert voor live louter-geluid content.
-          </p>
+
         </div>
       </section>
     </main>
