--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         src="../assets/logo.png"
         alt="logo Vervoerregio Amsterdam"
       />
-        <div id="after-curve">
-        </div>
-      </div>
+      <div id="after-curve"></div>
     </header>
 
     <!-- Dit is de sectie waar de content staat -->
     <main>
       <div class="wrapper">
         <div class="intro">
-          <h1><small>Maak kennis met</small> Toolgankelijk</h1>
+          <h1>
+            <small>Maak kennis met</small> Toolgankelijk
+          </h1>
         </div>
         <nav class="options">
           <h2>Kies een categorie</h2>
