--- a/waarneembaar.html
+++ b/waarneembaar.html
@@ -7,7 +7,7 @@
       content="width=device-width,initial-scale=1"
     />
     <title>
-      Vervoerregio Amsterdam - Toolgankelijkheid
+      Toolgankelijk - Waarneembaar
     </title>
     <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="../styles/mobile.css" />
@@ -30,7 +30,7 @@
 
     <!-- Hieronder bevinden zich de 4 hoofdcategorieën -->
     <aside class="cntt">
-      <a href="./waarneembaar.html" class="categorie">
+      <a href="./waarneembaar.html" class="categorie link-disabled">
         <svg
           viewBox="0 0 388 268"
           fill="none"
@@ -137,6 +137,7 @@
         </a>
       </li>
     </ul>
+
     <!-- Dit is de sectie waar de content staat -->
     <main>
       <section class="folder">
@@ -147,7 +148,7 @@
             Ondertiteling met de gesproken tekst en andere geluiden zorgt ervoor dat gebruikers met een auditieve beperking het filmpje kunnen volgen. Bovendien is een videobestand pas doorzoekbaar voor Google en andere zoekmachines als er audiodescriptie en ondertiteling aan is toegevoegd.
           </p>
           <br>
-          <h2><small>Tip</small></h2>
+          <h2 class="tip"><small>Tip</small></h2>
           <p>
             De ene mediaplayer biedt meer toegankelijkheidsopties dan de andere. Kies voor multimediasoftware die is ingericht op toegankelijkheid. Daarnaast is Scribit.pro een handig online programma waarmee je video’s eenvoudig  kunt voorzien van ondertiteling, audiodescriptie en een tekstalternatief.
           </p>
