--- a/waarneembaar.html
+++ b/waarneembaar.html
@@ -94,7 +94,7 @@
 
   <!-- Dit is de sectie waar de content staat -->
 
-  <main>
+  <main class="subject">
     <div class="toptab">
       <div class="tab"></div>
       <div class="curve"></div>
