--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   </header>
 
   <!-- Dit is de sectie waar de content staat -->
-  <main>
+  <main class="index">
     <div class="wrapper">
       <div class="intro">
-        <h1>
+        <h1 class="toolgankelijk">
           <small>Maak kennis met</small> Toolgankelijk
         </h1>
       </div>
