--- a/begrijpelijk.html
+++ b/begrijpelijk.html
@@ -81,7 +81,7 @@
     </aside>
 
     <!-- Dit zijn de drie knoppen om de toegankelijkheid van de content te verbeteren -->
-    <ul class="ui-settings">
+    <!--<ul class="ui-settings">
       <li>
         <a onclick="element">
           <svg
@@ -243,6 +243,7 @@
               2.2 Heeft de pagina een duidelijke titel die de inhoud van de pagina beschrijft?
             </h1>
             <br />
+            <span>
             <svg
                 width="24"
                 height="24"
