--- a/waarneembaar.html
+++ b/waarneembaar.html
@@ -79,7 +79,7 @@
     </aside>
 
     <!-- Dit zijn de drie knoppen om de toegankelijkheid van de content te verbeteren -->
-    <ul class="ui-settings">
+    <!--<ul class="ui-settings">
       <li>
         <button onclick="increaseFontSize">
           <svg
