--- a/robuust.html
+++ b/robuust.html
@@ -81,7 +81,7 @@
     </aside>
 
     <!-- Dit zijn de drie knoppen om de toegankelijkheid van de content te verbeteren -->
-    <ul class="ui-settings">
+    <!--<ul class="ui-settings">
       <li>
         <a onclick="element">
           <svg
