--- a/waarneembaar.html
+++ b/waarneembaar.html
@@ -11,18 +11,22 @@
     <link rel="stylesheet" href="../styles/mobile.css" />
     <link rel="stylesheet" href="../styles/tablet.css" />
     <link rel="stylesheet" href="../styles/desktop.css" />
-    <link rel="icon" type="image/png" href="./assets/va-favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/va-favicon.png"
+    />
   </head>
 
   <body>
     <header>
-        <a href="/">
-          <img
-            id="logo"
-            src="../assets/logo.png"
-            alt="logo Vervoerregio Amsterdam"
-          />
-        </a>
+      <a href="/">
+        <img
+          id="logo"
+          src="../assets/logo.png"
+          alt="logo Vervoerregio Amsterdam"
+        />
+      </a>
       <div id="after-curve"></div>
     </header>
 
@@ -88,24 +92,17 @@
       </div>
       <section class="folder">
         <div class="content">
-          <h1 class="select-title">Selecteer een onderwerp</h1>
+          <h1 class="select-title">
+            Selecteer een onderwerp
+          </h1>
           <div class="subcat">
-            <button
-              class="subcat-btn"
-              data-id="article1_1"
-            >
+            <button class="subcat-btn" data-id="article1_1">
               1.1 Gesproken tekst
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article1_2"
-            >
+            <button class="subcat-btn" data-id="article1_2">
               1.2 Visuele Audiobeschrijving
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article1_3"
-            >
+            <button class="subcat-btn" data-id="article1_3">
               1.3 Visuele aanwijzingen
             </button>
             <button
@@ -115,32 +112,26 @@
             >
               1.4 Ingevulde velden
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article1_5"
-            >
+            <button class="subcat-btn" data-id="article1_5">
               1.5 Voorgelezen inhoud
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article1_6"
-            >
+            <button class="subcat-btn" data-id="article1_6">
               1.6 Uitvergroot tot 200%
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article1_7"
-            >
+            <button class="subcat-btn" data-id="article1_7">
               1.7 Aangepaste tekstgrootte
             </button>
           </div>
-          <article id="article1_1" class="content-item hide">
+          <article
+            id="article1_1"
+            class="content-item hide"
+          >
             <h1>
               1.1 Filmpjes hebben een ondertiteling met de
               gesproken tekst en andere geluiden
             </h1>
             <br />
-              <div>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -211,7 +202,10 @@
               audiodescriptie en een tekstalternatief.
             </p>
           </article>
-          <article id="article1_2" class="content-item hide">
+          <article
+            id="article1_2"
+            class="content-item hide"
+          >
             <h1>
               1.2 Filmpjes en bewegend beeld hebben (indien
               nodig) een audiobeschrijving
@@ -291,7 +285,10 @@
               anders twee stemmen door elkaar klinken.
             </p>
           </article>
-          <article id="article1_3" class="content-item hide">
+          <article
+            id="article1_3"
+            class="content-item hide"
+          >
             <h1>
               1.3 Fouten en knoppen bestaan niet alléén uit
               visuele aanwijzingen (bijv. rode kleur).
@@ -360,9 +357,14 @@
               aanwijzingen uit verschillende spectrums.
             </p>
           </article>
-          <article id="article1_4" class="content-item hide">
+          <article
+            id="article1_4"
+            class="content-item hide"
+          >
             <h1>
-              1.4 Fouten of niet ingevulde velden zijn duidelijk aangegeven en er is, als dat kan, een suggestie voor verbetering.
+              1.4 Fouten of niet ingevulde velden zijn
+              duidelijk aangegeven en er is, als dat kan,
+              een suggestie voor verbetering.
             </h1>
             <br />
             <div>
@@ -391,7 +393,9 @@
               <h2 class="uitleg">Uitleg</h2>
             </div>
             <p>
-              Wanneer het niet duidelijk is welk ingevuld veld foutief is ingevuld kunnen gebruikers vastlopen. 
+              Wanneer het niet duidelijk is welk ingevuld
+              veld foutief is ingevuld kunnen gebruikers
+              vastlopen.
             </p>
             <br />
             <div>
@@ -419,12 +423,18 @@
               </svg>
               <h2 class="tip">Tip</h2>
             </div>
-            Verrijk de foutmelding met een concreet invulvoorbeeld.
+            <p>
+              Verrijk de foutmelding met een concreet
+              invulvoorbeeld.
             </p>
           </article>
-          <article id="article1_5" class="content-item hide">
+          <article
+            id="article1_5"
+            class="content-item hide"
+          >
             <h1>
-              1.5 De inhoud kan worden voorgelezen door een toepassing op de site/app
+              1.5 De inhoud kan worden voorgelezen door een
+              toepassing op de site/app
             </h1>
             <br />
             <div>
@@ -453,7 +463,8 @@
               <h2 class="uitleg">Uitleg</h2>
             </div>
             <p>
-              Voor het voorlezen hoeft geen speciale screenreader gebruikt te worden. 
+              Voor het voorlezen hoeft geen speciale
+              screenreader gebruikt te worden.
             </p>
             <br />
             <div>
@@ -482,12 +493,17 @@
               <h2 class="tip">Tip</h2>
             </div>
             <p>
-              Geef duidelijk aan waar gebruikers de inhoud kunnen laten voorlezen. 
+              Geef duidelijk aan waar gebruikers de inhoud
+              kunnen laten voorlezen.
             </p>
           </article>
-          <article id="article1_6" class="content-item hide">
+          <article
+            id="article1_6"
+            class="content-item hide"
+          >
             <h1>
-              1.6 De inhoud kan worden uitvergroot tot 200% zonder dat er inhoud uit het zicht verdwijnt
+              1.6 De inhoud kan worden uitvergroot tot 200%
+              zonder dat er inhoud uit het zicht verdwijnt
             </h1>
             <br />
             <div>
@@ -516,7 +532,9 @@
               <h2 class="uitleg">Uitleg</h2>
             </div>
             <p>
-              Door de inhoud eenvoudig te vergroten kunnen mensen met een visuele beperking de inhoud beter waarnemen. 
+              Door de inhoud eenvoudig te vergroten kunnen
+              mensen met een visuele beperking de inhoud
+              beter waarnemen.
             </p>
             <br />
             <div>
@@ -545,12 +563,17 @@
               <h2 class="tip">Tip</h2>
             </div>
             <p>
-              Geef deze eis duidelijk aan bij de ontwikkelaar van de website/app
+              Geef deze eis duidelijk aan bij de
+              ontwikkelaar van de website/app
             </p>
           </article>
-          <article id="article1_7" class="content-item hide">
+          <article
+            id="article1_7"
+            class="content-item hide"
+          >
             <h1>
-              1.7 Gebruikers kunnen de tekstgrootte aanpassen
+              1.7 Gebruikers kunnen de tekstgrootte
+              aanpassen
             </h1>
             <br />
             <div>
@@ -579,7 +602,9 @@
               <h2 class="uitleg">Uitleg</h2>
             </div>
             <p>
-              Door de teksten eenvoudig te vergroten kunnen mensen met een visuele beperking de inhoud beter waarnemen. 
+              Door de teksten eenvoudig te vergroten kunnen
+              mensen met een visuele beperking de inhoud
+              beter waarnemen.
             </p>
             <br />
             <div>
@@ -608,7 +633,8 @@
               <h2 class="tip">Tip</h2>
             </div>
             <p>
-              Geef duidelijk aan waar de gebruikers de tekstgrootte kunnen aanpassen. 
+              Geef duidelijk aan waar de gebruikers de
+              tekstgrootte kunnen aanpassen.
             </p>
           </article>
         </div>
