--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>
       Vervoerregio Amsterdam - Toolgankelijkheid
     </title>
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/mobile.css" />
-    <link rel="stylesheet" href="../styles/tablet.css" />
-    <link rel="stylesheet" href="../styles/desktop.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/mobile.css" />
+    <link rel="stylesheet" href="styles/tablet.css" />
+    <link rel="stylesheet" href="styles/desktop.css" />
     <link
       rel="stylesheet"
       href="../styles/desktop-xl.css"
