--- a/begrijpelijk.html
+++ b/begrijpelijk.html
@@ -9,10 +9,10 @@
     <title>
         Toolgankelijkheid · Begrijpelijk
     </title>
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/mobile.css" />
-    <link rel="stylesheet" href="../styles/tablet.css" />
-    <link rel="stylesheet" href="../styles/desktop.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/mobile.css" />
+    <link rel="stylesheet" href="styles/tablet.css" />
+    <link rel="stylesheet" href="styles/desktop.css" />
     <link rel="icon" type="image/png" href="./assets/va-favicon.png" />
   </head>
 
