--- a/robuust.html
+++ b/robuust.html
@@ -7,10 +7,10 @@
       content="width=device-width,initial-scale=1"
     />
     <title>Toolgankelijkheid · Robuust</title>
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/mobile.css" />
-    <link rel="stylesheet" href="../styles/tablet.css" />
-    <link rel="stylesheet" href="../styles/desktop.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/mobile.css" />
+    <link rel="stylesheet" href="styles/tablet.css" />
+    <link rel="stylesheet" href="styles/desktop.css" />
     <link
       rel="icon"
       type="image/png"
