--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/desktop.css" />
     <link
       rel="stylesheet"
-      href="../styles/desktop-xl.css"
+      href="styles/desktop-xl.css"
     />
     <link
       rel="icon"
