--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
       <img
         id="logo"
-        src="../assets/logo.png"
+        src="assets/logo.png"
         alt="logo Vervoerregio Amsterdam"
       />
       <div id="after-curve"></div>
